Done with ng directives with task 2  and till currency pipes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
+<!-- Task 1 on Bindings using [(ngModel)] -->
 <!-- <app-task-one></app-task-one> -->
 
-<app-directives></app-directives>
+<!-- Learn about angular directives (*ngFor, *ngIf, ng-templates, *ngSwitchCase, *ngSwitch) -->
+<!-- <app-directives></app-directives> -->
 
+<!-- Task 2 on ng Directives using [(ngModel)] -->
+<!-- <app-task-two></app-task-two> -->
 
+<!-- Learn about angular pipes -->
+<app-pipes></app-pipes>
 
 <!-- data sharing of parent to child component where fromParent is a reference and parent_message is coming form app.component.ts -->
 <!-- <app-navbar [fromParent]="parent_message"></app-navbar> -->
