--- a/src/app/task-one/task-one.component.html
+++ b/src/app/task-one/task-one.component.html
@@ -1,10 +1,11 @@
 <div class="align-center">
-    <h1>Post</h1>
+    <h1>Task One (Bindings)</h1>
     <br>
-    <input type="text" [(ngModel)] = 'input1' /><br><br>
-    <textarea name="" id="" cols="30" rows="10" [(ngModel)] = 'textareainput'></textarea><br><br>
-    <input type="text" [(ngModel)] = 'showImage' /><br><br>
-    <input type="checkbox" [(ngModel)] = 'tryCheck' />
+    <input type="text" [(ngModel)] = 'input1' placeholder="Name"/><br><br>
+    <textarea name="" id="" cols="30" rows="10" [(ngModel)] = 'textareainput' placeholder="Description"></textarea><br><br>
+    <input type="text" [(ngModel)] = 'showImage' placeholder="image URL"/><br><br>
+    <input type="checkbox" [(ngModel)] = 'tryCheck' /><br>
+    Check to add Red Border
 </div>
 <div class="results">
     <p>{{input1}}</p>
