--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,2 +1,9 @@
 <p>{{title}}</p>
 <button (click)='ClickMe()'>Click me</button>
+<!-- Example of dependency injection and angular service  -->
+<h2>Angular Service CLI</h2>
+<ul>
+    <li *ngFor="let arr of demoServiceArray">
+        {{arr.title}}
+    </li>
+</ul>
