--- a/src/app/pipes/pipes.component.html
+++ b/src/app/pipes/pipes.component.html
@@ -20,4 +20,33 @@
     <!-- Googgle for different ISO Currency Codes -->
     <!-- It takes three arg one is ISO code , second is if we want to show currency symbol if true and ISO code if false , last is the decimal with min and max as done in decimal pipe. -->
     <p>{{pip_currency | currency : 'INR' : true : '5.1-2'}}</p>
+    <!-- For formation in dates use https://angular.io/api/common/DatePipe -->
+    <li>{{angular_pipes[4]}}</li>
+    <p>{{pip_date | date:"short"}}</p>
+
+    <li>{{angular_pipes[5]}}</li>
+    <p>{{pip_json | json}}</p>
+
+    <li>{{angular_pipes[6]}}</li>
+    <!-- We have to provide value/100 in pip_percent to get the percentage pipe into working -->
+    <p>{{pip_percent | percent:'2.1-2'}}</p>
+
+    <li>{{angular_pipes[7]}}</li>
+    <p>Array => {{ pip_slice }}</p>
+    <!-- So when slicing the array the first parameter takes initial value and second take the till what (index-1) we want to slice-->
+    <p>{{ pip_slice | slice : 2 : 8 }}</p>
+    <p>String => {{ pip_slice_2 }}</p>
+    <p>{{ pip_slice_2 | slice : 0 : 4 }}</p>
+
+    <li>{{ angular_pipes[8] }}</li>
+    <p>{{ pip_custom_fname | custom : pip_custom_lname : pip_custom_age }}</p>
+
+    <!-- Example of dependency injection and angular service  -->
+    <h2>Angular Service CLI</h2>
+    <ul>
+        <li *ngFor="let arr of demoServiceArray">
+            {{arr.title}}
+        </li>
+    </ul>
+
 </ul>
