--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,4 +57,7 @@
 <input type="text" [(ngModel)] = 'userName' (keyup.enter)="getUserName(userName)" /> -->
 
 <!-- Angular Forms -->
-<app-forms></app-forms>
+<!-- <app-forms></app-forms> -->
+
+<!-- Angular Custom Validation Forms -->
+<app-cusformval></app-cusformval>
