Started with Angular Router and done with adding router manually and also used router directives like routerLink and tags router-outlet and also added home component to make it a landing page using routerModule

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,4 +60,11 @@
 <!-- <app-forms></app-forms> -->
 
 <!-- Angular Custom Validation Forms -->
-<app-cusformval></app-cusformval>
+<!-- adding the button for adding the routerlink -->
+<button class="btn btn-success" routerLink="/customValidation">Custom Validation form</button>
+<!-- Commenting the app-cusformval component and will be showing it via router-outlet tag -->
+<!-- <app-cusformval></app-cusformval> -->
+
+<!-- Angular Home Page -->
+<button class="btn btn-success" routerLink="/">Home Page</button>
+<router-outlet></router-outlet>
