Completed Observables in Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- Task 1 on Bindings using [(ngModel)] -->
+<button class="btn btn-outline-success mt-1 ml-2" routerLink="/taskOne">Task 1</button>
 <!-- <app-task-one></app-task-one> -->
 
 <!-- Learn about angular directives (*ngFor, *ngIf, ng-templates, *ngSwitchCase, *ngSwitch) -->
@@ -61,10 +62,14 @@
 
 <!-- Angular Custom Validation Forms -->
 <!-- adding the button for adding the routerlink -->
-<button class="btn btn-success" routerLink="/customValidation">Custom Validation form</button>
+<button class="btn btn-outline-success ml-2 mt-1" routerLink="/customValidation">Custom Validation form</button>
 <!-- Commenting the app-cusformval component and will be showing it via router-outlet tag -->
 <!-- <app-cusformval></app-cusformval> -->
 
 <!-- Angular Home Page -->
-<button class="btn btn-success" routerLink="/">Home Page</button>
+<button class="btn btn-outline-success ml-2 mt-1" routerLink="/">Home Page</button>
+<!-- Angular All Posts Page -->
+<button class="btn btn-outline-success ml-2 mt-1" routerLink="/allPosts">All Posts</button>
+
+
 <router-outlet></router-outlet>
