--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="contaner mt-5">
-    <h1 class="text-center">Welcome to Home Page.</h1>
+    <h1 class="text-center">Welcome to Home Page!</h1>
 </div>
